--- a/index.html
+++ b/index.html
@@ -42,10 +42,13 @@
                         <a class="page-scroll" href="#/">Dashboard</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#team">About Me</a>
+                        <a class="page-scroll" href="#/favorites">Favorites</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
+                        <a class="page-scroll" href="#/me">About Me</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#/contact">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -78,6 +81,5 @@
     <script type="text/javascript" src="js/services/services.js"></script>
     <script type="text/javascript" src="js/routes.js"></script>
 	<script type="text/javascript" src="js/app.js"></script>  
-   	<script type="text/javascript" src="js/bootstrap.min.js"></script>
 </body>
 </html>
