done without documentation

--- a/index.html
+++ b/index.html
@@ -25,15 +25,12 @@
 	<!-- Navigation -->
     <nav id="mainNav" class="navbar navbar-default navbar-custom navbar-fixed-top">
         <div class="container">
+        <span class="navbar-title">European Football Leagues Database</span>
             <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header page-scroll">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
-                </button>
-            </div>
+            
 
             <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <div class=" navbar-collapse" id="menu">
                 <ul class="nav navbar-nav navbar-right">
                     <li class="hidden">
                         <a href="#page-top"></a>
@@ -45,10 +42,10 @@
                         <a class="page-scroll" href="#/favorites">Favorites</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#/me">About Me</a>
+                        <!-- <a class="page-scroll" href="#/me">About Me</a> -->
                     </li>
                     <li>
-                        <a class="page-scroll" href="#/contact">Contact</a>
+                        <!-- <a class="page-scroll" href="#/contact">Contact</a> -->
                     </li>
                 </ul>
             </div>
@@ -59,11 +56,10 @@
 
     <!-- Header -->
     <header>
-        <div class="container">
-            <div class="intro-text">
-                <h1>European Football Leagues Database</h1>
-            </div>
+        <div class="jumbotron">       
+            <img src="img/bg.jpg" class="img-responsive" alt="">
         </div>
+       
     </header>
 
     <!-- Services Section -->
@@ -81,5 +77,6 @@
     <script type="text/javascript" src="js/services/services.js"></script>
     <script type="text/javascript" src="js/routes.js"></script>
 	<script type="text/javascript" src="js/app.js"></script>  
+    <script type="text/javascript" src="js/checkImage.js"></script> 
 </body>
 </html>
